--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
+    "immutable": "^3.8.1",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.2"
   }
 }
