--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "build": "webpack",
     "start": "webpack-dev-server"
   },
   "devDependencies": {
